# pip-preserve-requirements

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pip_preserve_requirements/: __init__.py  __main__.py  _cache.py  _compat.py  _config.py  _norm_reqs.py  _pip_vcs_url.py  _schemas.py  _tag_name_factory.py  _tag_requirements.py  _utils.py  _vcs.py  _vcs_git.py  _vcs_registry.py
tests/: test_cache.py  test_config.py  test_norm_reqs.py  test_pip_vcs_url.py  test_tag_name_factory.py  test_tag_requirements.py  test_utils.py  test_vcs_git.py
