[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pip-preserve-requirements"
description = "Preserve pinned PIP requirements in repositories you control.."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [{ name = "Stéphane Bidoul", email = "stephane.bidoul@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "typer",
  "pip-requirements-parser",
  "pydantic",
  "tomli ; python_version<'3.11'",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "coverage", "mypy"]

[project.scripts]
pip-preserve-requirements = "pip_preserve_requirements.__main__:main"

[project.urls]
Documentation = "https://github.com/sbidoul/pip-preserve-requirements#readme"
Issues = "https://github.com/sbidoul/pip-preserve-requirements/issues"
Source = "https://github.com/sbidoul/pip-preserve-requirements"

[tool.hatch.version]
source = "vcs"

# coverage

[tool.coverage.run]
branch = true
parallel = true
omit = []

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

# mypy

[tool.mypy]
strict = true
show_error_codes = true

# ruff

[tool.ruff]
fix = true

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "C4",
  "C90",
  "W",
  "UP",
]

[tool.ruff.lint.isort]
known-first-party = ["pip_preserve_requirements"]
